--- a/app/src/main/res/layout/layout_log.xml
+++ b/app/src/main/res/layout/layout_log.xml
@@ -51,12 +51,31 @@
             android:layout_height="1dp"
             android:background="#455a64"
             android:layout_marginTop="5dp"/>
-        <ListView
-            android:id="@+id/listview_logs"
+        <ScrollView
+            android:id="@+id/svTermial"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/btn_calibration"
-            android:layout_below="@+id/view"></ListView>
+            android:layout_below="@+id/view"
+            android:fillViewport="false">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:id="@+id/terminalLayout"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:clipToPadding="false">
+
+                <TextView
+                    android:id="@+id/tvTerminal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:typeface="monospace"
+                    android:textIsSelectable="false" />
+
+            </LinearLayout>
+
+        </ScrollView>
 
 
         <Button
